# template_cmake

./: .clang-tidy  .gitignore  CMakeLists.txt  azure-pipelines.yml
include/: sample.h
src/: CMakeLists.txt  main.cpp  sample.cpp
tests/: CMakeLists.txt  sample_test.cpp
